--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"dev": "next dev --turbo",
 		"preview": "next build && next start",
 		"start": "next start",
-		"typecheck": "tsc --noEmit"
+		"typecheck": "tsc --noEmit",
+		"yarn dev": "next dev --turbo"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
+		"@next/third-parties": "^16.1.6",
 		"@portabletext/react": "^6.0.2",
 		"@sanity/image-url": "^2.0.3",
 		"@t3-oss/env-nextjs": "^0.12.0",
